--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,12 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>test</title>
-</head>
-<body>
-    <h1>Test</h1>
-</body>
-</html>
+{% extends 'core/base.html' %}
+
+
+{% block content %}
+    <h1>this is a test</h1>
+
+
+
+{% endblock content %}
