--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marketplace</title>
+    <title>
+        {% block title %}{% endblock title %} | Marketplace
+    </title>
 </head>
 <body>
     
