--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -1,6 +1,11 @@
 {% extends 'core/base.html' %}
 
 
+{% block title %}
+    Welcome
+{% endblock title %}
+    
+
 {% block content %}
     <h1>this is a test</h1>
 
