--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -4,15 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>
         {% block title %}{% endblock title %} | Marketplace
     </title>
 </head>
 <body>
-    
-    {% block content %}
-        
-    {% endblock content %}
+    <nav class="px-6 py-6 flex justify-between items-center border-b border-gray-200">
+        <a href="/" class="text-xl font-semibold">Puddle</a>
+
+        <div class="space-x-6">
+            <a href="#" class="text-lg font-semibold hover:text-gray-500">New item</a>
+            <a href="#" class="text-lg font-semibold hover:text-gray-500">Browse</a>
+
+            <a href="#" class="px-6 py-3 text-lg font-semibold bg-teal-500 text-white rounded-xl hover:bg-teal-700">Sign up</a>
+            <a href="#" class="px-6 py-3 text-lg font-semibold bg-gray-500 text-white rounded-xl hover:bg-gray-700">Log in</a>
+        </div>
+    </nav>
+
+    <div class="px-6 py-6">
+        {% block content %}
+        {% endblock content %}
+    </div>
         
 </body>
 </html>
